--- a/rgb/rgb.css
+++ b/rgb/rgb.css
@@ -10,13 +10,14 @@
 }
 .main {
   text-align: center;
+  
 }
 .primarios {
   display: flex;
   justify-content: center;
 }
 .verde {
-  background-color: green;
+  background-color: rgb(0,255, 0);
 }
 .azul {
   background-color: blue;
@@ -47,7 +48,7 @@ p {
      
 }
 .verde2{
-    background-color: green;
+    background-color: rgb(0,255, 0);
     position: relative;
     left: -20px;
 }
@@ -68,5 +69,10 @@ p {
 .graph{
 display: flex;
 justify-content: center;
-margin: 0 auto;
+margin-left: 7.5rem;
+margin-bottom: 100px;
+
+}
+rgb-titulo{
+    text-align: center;
 }
