--- a/querys/querys.css
+++ b/querys/querys.css
@@ -1,63 +1,59 @@
 body {
-  margin: 0px;
+  margin: 10px;
 }
 
-.container-1{
+.container {
+  display: flex;
+  gap: 20px;
   margin-bottom: 20px;
 }
-
-.orange{
-  background-color: orange;
-  margin: 5px;
-  height: 100px;
-}
-/* Mobile */
-@media(width<=320px){
-
+.container-1 div {
+  width: 100%;
+  height: 150px;
+  background-color: #fea332;
 }
 
-/* Tablet */
-@media(321px < width < 1024px){
-
+.container-2 div {
+  background-color: #dbec00;
+  width: 100%;
+  height: 300px;
 }
 
-/* Desktop */
-@media(width>=1024px){
-  .container-1{
-    display: flex;
+.container-3 div {
+  background-color: #4a89d0;
+  width: 100%;
+  height: 300px;
+}
+
+.container-4 div {
+  background-color: #e3e3e3;
+  width: 100%;
+  height: 300px;
+}
+.container-4 {
+  display: flex;
+  gap: 20px;
+  flex-direction: row;
+}
+/* Tablet*/
+@media screen and (max-width: 768px) {
+  .container-3 {
+    display: block;
   }
-
-  .orange{
-    width: 49vw;
+  .container-3 div {
+    margin-bottom: 20px;
+    height: 100px;
+  }
+  .container-4 {
+    flex-wrap: wrap;
+  }
+  .container-4 div {
+    height: 200px;
+    flex: 1;
+    flex-basis: 40%;
   }
 }
 
- .divs{
-    margin: 10px ;
+/* Movil*/
+@media screen and (max-width: 330px) {
 }
-.naranja {
-  background-color: orange;
-  height: 80px;
-}
-.amarillo {
-  background-color: yellow;
-  height: 200px;
-}
-.azul {
-  background-color: aqua;
-  height: 80px;
-}
-
-.gris {
-  background-color: grey;
-  height: 80px;
-}
-
-@media (1024px <= width) {
-  .naranjas {
-    display: flex;
-  }
-  .naranja {
-    background-color: orange;
-  }
-} 
